# scl

./: .travis.yml  CMakeLists.txt  README.md
cmake/: FindZeroMQ.cmake
src/: CMakeLists.txt  sclhelper.c  sclhelper.h  sclhelper.hpp  setup.py
